# wofost-assumptions-tracking

./: .coveragerc  .dockerignore  .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  SECURITY.md  behave.ini  docker-compose.devcontainer.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  lint.yaml  publish.yaml  test.yaml
binder/: Dockerfile
data/: ground_truth.json  india_synthetic_test_data.csv  netherlands_synthetic_test_data.csv  potato_india_2021.agro  potato_netherlands_2021.agro
docs/source/: conf.py  index.rst
docs/source/api_reference/: calibration.rst  index.rst  utils.rst  wofost.rst
docs/source/changelogs/: changelog.rst
docs/source/community/: index.rst
docs/source/license/: license.rst
docs/source/tutorials/: quickstart.rst
features/: environment.py  optimisation.feature  sensitivity.feature
features/steps/: step_calibration.py  step_wofost.py  tutorial.py
notebooks/: 1_wofost_lai.ipynb  2_basic_sensitivity_wofost_lai.ipynb  3_basic_optimisation_wofost_lai.ipynb  3_optimisation_wofost_lai.ipynb  4_history_matching_wofost_lai.ipynb  5_basic_abc_wofost_lai.ipynb  6_full_sensitivity_wofost.html  6_full_sensitivity_wofost.ipynb  7_full_optimisation_wofost.html  7_full_optimisation_wofost.ipynb  wofost_lai.ipynb
reports/: Behavioural_test.html
scripts/: json_to_md.py
tests/: test_scaffold.py
wofostat/: __init__.py  calibration.py  utils.py  wofost.py
