[tool.poetry]
name = "wofostat"
version = "1.0.0"
description = "Assumptions tracking for WOFOST Potato using behaviour-driven development and model cards."
authors = [
    "James Bristow <James.Bristow@plantandfood.co.nz>",
    "Jingjing Zhang <Jingjing.Zhang@plantandfood.co.nz>",
    "Chris Van Houtte <Chris.Vanhoutte@plantandfood.co.nz>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Plant-Food-Research-Open/wofost-assumptions-tracking"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
calisim = "^0.6.3"
pcse = "^6.0.12"
behave = "^1.3.3"

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^3.0.1"
sphinx = "^8.1.3"
sphinx-argparse = "^0.5.2"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
autodoc-pydantic = "^2.2.0"
myst-nb = "^1.1.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
ipywidgets = "^8.1.5"
jupyter-core = "^5.7.2"
pytest = "^8.3.3"
coverage = "^7.6.3"
pre-commit = "^4.0.1"
pytest-cov = "^5.0.0"
mypy = "^1.12.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-env = "^1.1.5"
types-pyyaml = "^6.0.12.20240917"
ruff = "^0.7.0"
jupyterlab = "^4.3.1"
codespell = "^2.4.1"
tomli = "^2.2.1"
pytest-md-report = "^0.6.3"
notebook = "^7.4.7"
jupyterhub = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
extend-select = [
    "UP",
    "F",
    "E",
    "W",
    "I",
    "NPY",
    "RUF"
]

extend-ignore = [
    "W191",
    "E101",
    "RUF012"
]

[tool.codespell]
skip = './docs/build,poetry.lock'
count = true
quiet-level = 3
ignore-words-list = 'sies,SIES,te'

[tool.bandit]
skips = ["B101", "B113"]
